# fenneq

./: 404.html  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml
docs/: api.rst  conf.py  description.rst  fennec.rst  index.md  index.rst  modules.rst  usage.md  usage.rst
fennec/: __init__.py  listener.py
fenneq/: __init__.py  agent.py
search/: search_index.json
usage/: index.html
