[tool.poetry]
name = "fenneq"
version = "0.1.0"
description = "Framework to create agents based on RabbitMQ"
authors = ["Sergio Vinagrero Gutierrez <servinagrero@gmail.com>"]
keywords = ['rabbitmq', 'agent']
readme = "README.md"
license = "MIT"
homepage = "https://github.com/servinagrero/fenneq"
repository = "https://github.com/servinagrero/fenneq"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
